# SkychimpService

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
skychimp/: apps.py  models.py  urls.py  views.py
skychimp/migrations/: 0001_initial.py  0002_delete_mailingmessage_delete_mailingsettings_and_more.py
skychimp/templates/skychimp/: base.html  main.html
skychimp/templates/skychimp/includes/: head.html  nav.html
skysend/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
skysend/migrations/: 0001_initial.py  0002_remove_mailingsettings_mailing_client_and_more.py  0003_alter_mailingsettings_sending_time.py  0004_mailingsettings_is_active_and_more.py  0005_mailingsettings_begin_date_and_more.py  0006_rename_create_date_mailingsettings_created_at_and_more.py  0007_alter_mailingsettings_options_and_more.py
skysend/templates/skysend/: mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html
static/js/: color-modes.js
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_comment_remove_user_fio.py
users/templates/users/: login.html  recovery_password.html  register.html  user_form.html  user_list.html
